# Multi-Agent-Financial-Analysis-System

./: .gitignore  README.md  main.py  pyproject.toml  test_agents.py
Utils/: datetime_utils.py  db_util.py  properties_util.py
adapters/: csv_adapter.py  news_adapter.py
agents/: analyst.py  base.py  coordinator.py  decision_maker.py  evaluator.py  optimizer.py  senior_researcher.py  writer.py
config/: db_config.py
dao/: news_dao.py
data/processed/: agent_memory.db
models/: dto.py  orm.py
notebooks/: MultiAgentFinancialFramework.ipynb  Sudhakar_TFinalProject.html  Sudhakar_TFinalProject.ipynb
notebooks/data/processed/: agent_memory.db  news.db
properties/: global-settings.properties
services/: news_service.py
tools/: economic_tool.py  news_tool.py  stock_tool.py
