[project]
name = "finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses>=0.8",
    "gpt4all>=2.8.2",
    "nbformat>=5.10.4",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "yfinance>=0.2.66",
]
